[package]
authors = ["Mikuto Matsuo <black_rais0n.detre@icloud.com>"]
edition = "2018"
name = "wgpu-tutorial"
resolver = "2"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bytemuck = {version = "1.4", features = ["derive"]}
cgmath = "0.18"
env_logger = "0.9"
image = "0.23"
log = "0.4"
pollster = "0.2"
tobj = "3.0"
wgpu = "0.11"
winit = "0.25"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"

[[bin]]
name = "tutorial9-models"
path = "src/main.rs"
